# doe2vec

./: .gitignore  Makefile  README.md  bbobbenchmarks.py  doe2vec.py  exp_bbob.py  exp_bbob_class.py  mkdocs.yml  mkgendocs.yml  playground.ipynb  pyproject.toml  requirements.txt  setup.py  versions.json
.github/workflows/: linter.yml
0.7.3/: index.html
0.7.3/contributing/: index.html
0.7.3/doe2vec/doe_model/: index.html
0.7.3/search/: search_index.json
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/doe2vec/doe_model/: index.html
0.8.0/installation/: index.html
0.8.0/license/: index.html
0.8.0/search/: search_index.json
demos/: demo_latentspace.py  demo_reconstruction.py
docs/sources/: index.md  installation.md
docs/sources/doe2vec/: doe_model.md
experiments/: exp_bbob.py  exp_bbob_class.py  exp_bbob_ela.py  exp_generator.py  exp_latent.py  exp_reco.py  exp_reco_adapt.py  push_to_huggingface.py
experiments/ela/: CEOELA_computeELA.R  CEOELA_main.py  exp_bbob_class.py  exp_bbob_class2.py  format_table.py  gecco tutorial.md  rebuttal.md
latest/doe2vec/doe_model/: index.html
latest/license/: index.html
modulesRandFunc/: generate_tree.py  generate_tree2exp.py
src/: base_nconf.py  bbobbenchmarks.py  classifiers.py  classifiers_opt.py  convnd.py  doe2vec.py  f1_results_class.json  models.py  new_results_class.json  print_table.py  test_doe2vec.py
src/modulesRandFunc/: NODE.py  generate_exp2fun.py  generate_tree.py  generate_tree2exp.py
